# VitaBridge

./: README.md
backend/: build.gradle
backend/scripts/: setup_db.ps1
backend/src/main/resources/: application.properties
backend/src/test/resources/: application-test.properties
backend2/: .gitignore  README.md  alembic.ini  pyproject.toml  start.bat  verify-setup.bat
backend2/alembic/: env.py
backend2/alembic/versions/: 20260326_01_init_schema.py  20260326_02_make_measurement_report_optional.py
backend2/app/: main.py
backend2/app/api/v1/: routes.py
backend2/app/core/: settings.py
backend2/app/db/: session.py
backend2/app/models/: __init__.py  enums.py  measurement.py  report.py
backend2/app/schemas/: common.py
backend2/app/services/: ingestion_service.py  ocr_service.py  parser_service.py  symptom_service.py  trend_service.py
backend2/backend2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: adminApi.js  agoraApi.js  assistantApi.js  authenticationApi.js  consultationApi.js  doctorApi.js  httpClient.js  patientApi.js  paymentApi.js  wsClient.js
frontend/src/components/admin/: AdminDashboard.jsx  AdminProfile.jsx  Appointment.jsx  AssistantAssignment.jsx  Complaints.jsx  DailyReports.jsx  (+4 more)
frontend/src/context/: AuthenticationContext.js  CallContext.jsx  NotificationContext.jsx  callContextValue.js  useCall.js  useNotifications.js
frontend/src/utils/: formatters.js  mediaCheck.js  prescriptionPdf.js
(+164 files in other folders)
